Version 1.0
----------------------------------------------------------------------
2006-10-25:
	* fixed problem with configure/make, it didnt rebuilt fresh
	  after reconfiguring

2006-09-25:
	* fixed #4, -bg image wasnt working, wrong loop

2006-09-22:
	* added new auth method: wpool, hash-based authentification
	  using the whirlpool hash algorithm, updated docs
	* minor tweaks to buildsystem and standalones
	* cosmetic issues on some files (fprintf, etc)

2006-09-19:
	* fixed #3, buildsystem doesnt built with shadow-support
	* added missing xcursors, updated docs

2006-09-18:
	* fixed #2, missing includes in Xrender check
	* fixed --enable-imlib2 wasnt implying --enable-xrender

2006-09-15:
	+ minor tunes to src/Makefile
	* fixed some bashisms in configure to make it work on fbsd
	* closed issue #1, added --with-all to configure
	* started using google-hosting for issuetracking
	  (http://code.google.com/p/alock)

2006-09-11:
	* made the timeout function more clear
	* only accept rlen < 50, dont increase it when it makes no sense
	* minor splint based mods

2006-06-01:
	* fixed gmake buildsystem

2006-05-29:
	* added a minimal configure / gmake buildsystem to make building easier
	* stop when no auth method is selected to prevent confusion

2006-05-05:
	* lock all screens if in X is running in multiscreen mode

2005-12-25:
	* added -auth sha256
	* added -auth sha384
	* added -auth sha512

2005-08-12:
	* added static=yes built option to scons

2005-06-01:
	* added -cursor image:file=<filename>, uses xrender and xpm/imlib2

2005-05-25:
	* solved problems install-problems: use at least scons 0.96.90
	* minor tweaks to buildsystem

2005-05-24:
	* updated documentation
	* updated buildsystem, scons install works
	* rewritten README to be also in asciidoc-format
	* more consistency in the ui, updated documentation
	* added -auth md5:file=<filename>
	* added -auth sha1:file=<filename>
	* rename -cursor font to -cursor glyph

2005-05-23:
	* added -bg image:shade=<perc>